--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://icon-library.com/images/api-icon/api-icon-4.jpg" type="image/x-icon">
     <title>Api Introduction</title>
 </head>
 <body>
-    
+    <button onclick="loadQuote()">Load quote</button>
+    <blockquote id="quote">
+    </blockquote>
+
+    <script src="js/api.js"></script>
 </body>
 </html>
